# actixwebtest

./: .env  .gitignore  Cargo.toml  Checklist.md  Dockerfile  Dockerfile.db  README.md  create_env.sh  docker-compose.yml  docker_commands.txt  run_db.sh  run_setup_full.sh  stop_db.sh
.github/workflows/: SetupDB.yml  docker-image.yml  main.yml
html/: index.html
migrations/2023-06-05-105238_parts/: down.sql  up.sql
migrations/2023-12-04-152435_testing_two_parts/: down.sql  up.sql
src/: db_utils.rs  main.rs  part.rs  schema.rs
