[package]
name = "ActixWebTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = {version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15.7"
serde = {version = "1.0.163",features=["derive"]}
# local-ip-address = "0.5.3"